--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -13,34 +13,47 @@
   </head>
   <body>
     <div class="container">
-      <h2>Movie Storage</h2><hr />
+      <h1>Movie Storage</h1><hr />
       <div class="row card">
           <div class="col-md-4 card-block" >
             <form class="inputForm" ng-controller="InputController" ng-submit="addMovieData(movie)">
               <div class="form-group">
-                <label>Movie:</label><br /><input type="text" ng-model="movie.name" placeholder="name"/>
+                <label class="control-label " for="name">Movie</label>
+                <input type="text" ng-model="movie.name" />
               </div><br />
                <div class="form-group">
-                <label>Description</label><br /><input type="text" ng-model="movie.desc" />
+                <label class="control-label " for="description">Description</label>
+                <textarea class="form-control" cols="5" rows="5" ng-model="movie.desc">
+                </textarea>
               </div>
               <div class="form-group">
-                <b>Director</b><br /><input type="text" ng-model="movie.director" />
+                <label class="control-label " for="director">Director</label>
+                <input type="text" ng-model="movie.director" />
               </div>
               <div class="form-group">
-                <b>Duration</b><br /><input type="text" ng-model="movie.duration" />
+                <label class="control-label " for="duration">Duration</label>
+                <input type="text" ng-model="movie.duration" />
               </div>
               <div>
                 <input id="submit" type="submit" class="btn btn-primary">
               </div>
             </form>
           </div>
-          <div class="col-md-8" ng-controller="OutputController" >
-            <h2>Movie List:</h2>
-             <div class="row" ng-repeat="movie in movieSet">
-             <b>  {{movie.name}} </b>
-              {{movie.desc}}
-              {{movie.director}}
-              {{movie.duration}}
+          <div class="col-md-2"></div>
+          <div class="col-md-6 panel-group" ng-controller="OutputController" >
+             <div class="row panel panel-info" ng-repeat="movie in movieSet">
+                 <div class="title panel-heading">
+                   <b>{{movie.name}} </b><hr />
+                 </div>
+                 <div class="panel-body">
+                   <i>{{movie.director}}</i>
+                 </div>
+                 <div class="panel-body">
+                   {{movie.duration}}
+                 </div>
+                <div class="panel-body">
+                  {{movie.desc}}
+                </div>
              </div>
           </div>
     </div>
