--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -7,6 +7,11 @@ body {
 .title {
   font-size: 20px;
   text-align: center;
+  text-shadow: 2px 2px 4px #000000;
+}
+h1
+{
+  font-size: 50px;
   color: white;
   text-shadow: 2px 2px 4px #000000;
 }
